# luo9_bot

./: .gitignore  Cargo.toml  README.md  config.(example).yaml  config.py  debug.py  debug_launcher.py  logger.py  main.py  requirements.txt  ruff.toml  setup_debug_ui.py
.devin/: wiki.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature-request.yml
.github/workflows/: build.yml  publish.yml
config/: example.toml
data/: config.(example).yaml
debug_ui/: README.md
debug_ui/static/css/: style.css
debug_ui/static/js/: app.js
debug_ui/templates/: index.html
luo9/: __init__.py  action.py  api_manager.py  drivers.py  group.py  handle.py  message.py  notice.py  plugin_manager.py  tasks.py  timeout.py  user.py
luo9/NapCat/: __init__.py  group.py  user.py
plugins/: __init__.py  api.py  bilibili.py  chat.py  config.yaml  daily_sign_in.py  repeat.py  schedule_task.py  user_register.py
plugins/JMComic/: config.(example).yml  main.py
plugins/achievement/: __init__.py  data_value.py  main.py
plugins/ai_chat/: config.(example).yaml  config_loader.py  conversation.py  cron.py  main.py  sender.py  state.py
plugins/api/: main.py
plugins/blog-link-monitoring/: config.(example).yaml  main.py
plugins/core_plugin/: daily_sign_in.py  main.py  user_register.py
plugins/deltaforce/: api.py  image.py  login.py  main.py  process.py  query.py  utils.py
plugins/example_plugin/: Cargo.toml
plugins/example_plugin/src/: lib.rs
plugins/festival/: __init__.py  date_value.py  element.py  main.py
plugins/github_card/: Cargo.toml  main.py
plugins/github_card/src/: lib.rs
plugins/pc_status/: config.(example).yaml  data.py  main.py  server.py
plugins/repeat/: main.py
plugins/schedule_task/: main.py
plugins/sky/: Cargo.toml  main.py
plugins/sky/src/: lib.rs
rust_plugin_manager/: Cargo.toml  README.md
rust_plugin_manager/src/: lib.rs
src/: config.rs  error.rs  lib.rs  main.rs  plugin.rs  sub_type.rs  webui.rs
src/api/: mod.rs
src/api/napcat/: group.rs  mod.rs  user.rs
src/config/: value.rs
src/connection/: mod.rs  receiver.rs  sender.rs
src/core/: driver.rs  handler.rs  message.rs  mod.rs  plugin_manager.rs  plugin_registry.rs  task.rs
src/event/: mod.rs  napcat.rs
src/handler/: core.rs  event.rs  message.rs  mod.rs  notice.rs
src/message/: mod.rs  napcat.rs
src/notice/: mod.rs  napcat.rs
src/plugin/: bus.rs  data.rs  dispatch.rs  handle.rs  loader.rs  manager.rs  mod.rs  publisher.rs  sender.rs  subscriber.rs  task.rs  task_bus.rs  version.rs
src/plugins/: loader.rs  manager.rs  mod.rs
src/utils/: check.rs  download_img.rs  logger.rs  mod.rs
src/webui/: app.js  index.html  style.css
test/: jm_test.py  parse.py  test.py
test/JMComic/: config.yml  main.py
test/battle_arena/: battle.py  config.yaml  database.py  enhancement.py  gif_generator.py  inventory.py  items.py  main.py  ranking.py
utils/: __init__.py  check.py  debug.py  download_img.py  ini_files.py  message_limit.py  random_run.py  record.py
