[package]
name = "luo9_bot"
version = "1.0.0"
edition = "2024"
authors = ["drluo <drluo.top@163.com>"]
description = "洛玖机器人 - Rust 版本"

[dependencies]
rayon = "1.8.0"
# 异步运行时
tokio = { version = "1.28", features = ["full"] }
# Web 框架
axum = "0.8.1"
tower = "0.5.2"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# HTTP 客户端
# API 相关依赖
async-trait = "0.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
# 错误处理
anyhow = "1.0"
thiserror = "2.0.12"
# 时间处理
chrono = "0.4"
# 文件系统操作
walkdir = "2.3"
# 正则表达式
regex = "1.8"
# 异步流处理
futures = "0.3"
# 插件系统 (可选择以下方案之一)
libloading = "0.8"  # 动态库加载
wasmer = "5.0.4"      # WebAssembly
pyo3 = { version = "0.24.0", features = ["extension-module"] }  # Python 集成
# 插件系统相关依赖
lazy_static = "1.4"
ctor = "0.4.1"
md-5 = "0.10.6"
configparser = "3.1.0"
[features]
plugin_registry = []

[lib]
name = "luo9_bot"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "luo9_bot_exe"
path = "src/main.rs"

# [[bin]]
# name = "debug"
# path = "src/bin/debug.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1