[package]
name = "luo9_bot"
version = "0.1.0-beta.5"
edition = "2024"
authors = ["luoy-oss <2557657882@qq.com>"]
description = "洛玖机器人"

[features]
bot_debug = []
plugin_dispatch_debug = []
napcat = []
plugins = []  # 插件系统支持
default = ["napcat"]

[dependencies]
luo9_sdk = "0.6.0"
# luo9_sdk = { path = "H:\\github\\luo9_bot\\sdk\\rust" }

# 异步运行时
tokio = { version = "1.50.0", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

# 日志
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# 错误处理
anyhow = "1.0.102"
thiserror = "2.0.18"
chrono = "0.4.44"
libloading = "0.9.0"
lazy_static = "1.5.0"
libc = "0.2"

# WebUI
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6.9", features = ["cors"] }
reqwest = { version = "0.13.3", features = ["json"] }
dirs = "6"
async-stream = "0.3"


[lib]
path = "src/lib.rs"
 
[[bin]]
name = "luo9_bot"
path = "src/main.rs"


[profile.release]
opt-level = 3      # 优化目标：最大执行速度
lto = "fat"        # 启用最激进的链接时优化
codegen-units = 1  # 减少代码生成单元数量，提高优化效果
panic = "abort"    # 使用"abort"而非"unwind"处理恐慌\
