[package]
name = "example_plugin"
version = "1.0.0"
edition = "2024"
authors = ["drluo <drluo.top@163.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
luo9_bot = { path = "../.." }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }